# projet5_OCR

./: Dockerfile  Processus  README.md  docker-compose.yml  dockerfile  init-mongo.js  pyproject.toml  requirements.txt
P5_sources_pytest/: conftest.py  migration_script.py  test_migration.py
