[project]
name = "test1"
version = "v1"
description = "test1"
authors = [
    {name = "Didier Hernandez"}
]
license = {text = "GNU GPL version 3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "pandasql (>=0.7.3,<0.8.0)",
    "pymongo (>=4.15.1,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
